--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "update:eslint-docs": "eslint-doc-generator"
   },
   "dependencies": {
-    "requireindex": "^1.2.0"
+    "requireindex": "^1.2.0",
+    "user": "^0.0.0"
   },
   "devDependencies": {
     "eslint": "^8.19.0",
